istio/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - app.your-domain.com
  http:
  - route:
    - destination:
        host: app-primary
    mirror:
      host: app-shadow
